2008-12-14  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Utils.py, S3/Config.py, S3/Progress.py: Detect
	  encoding from stdin/stdout/stderr and put it into
	  Config.system_encoding. 
	  Set _stdout/_stderr rewriters accordingly with the detected 
	  encoding.
	  Also keep the rewriters' streams in Config

2008-12-14  Michal Ludvig  <michal@logix.cz>

    Merge from trunk r288:
	* S3/Progress.py: Restructured import Utils to avoid import
	  conflicts.

2008-12-12  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Better Exception output. Print sys.path on ImportError,
	  don't print backtrace on KeyboardInterrupt

2008-12-11  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Support for multiple sources in 'get' command.

2008-12-10  Michal Ludvig  <michal@logix.cz>

	* TODO: Updated list.
	* s3cmd: Don't display download/upload completed message
	  in --progress mode.
	* S3/S3.py: Pass src/dst names down to Progress class.
	* S3/Progress.py: added new class ProgressCR - apparently 
	  ProgressANSI doesn't work on MacOS-X (and perhaps elsewhere).
	* S3/Config.py: Default progress meter is now ProgressCR
	* s3cmd: Updated email address for reporting bugs.

2008-12-02  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, NEWS: Support for (non-)recursive 'ls'

2008-12-01  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre3
	  ---------------------------

	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre3

2008-12-01  Michal Ludvig  <michal@logix.cz>

	* run-tests.py: Added a lot of new tests.
	* testsuite/etc/logo.png: New file.

2008-11-30  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py: object_get() -- make start_position argument optional.

2008-11-29  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Delete local files with "sync --delete-removed"

2008-11-25  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/Progress.py: Fixed Unicode output in Progress meter.
	* s3cmd: Fixed 'del --recursive' without prefix (i.e. all objects).
	* TODO: Updated list.